--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,9 +7,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     
-    <script src="./public/assets/js/index.js"></script>
+    <script src="/public/assets/js/index.js"></script>
+    <link rel="stylesheet" href="/public/assets/css/styles.css"
 </head>
-<body>
+<body class="brown lime-text text-lighten-3">
+    <div class="container">
     {{{body}}}
+    </div>
+
+    
+
 </body>
 </html>
